add target sampler with uniform distribution test

--- a/sampler.ipynb
+++ b/sampler.ipynb
@@ -2,46 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.11.0'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "torch.cuda.is_available()\n",
     "import numpy as np\n",
     "import utils\n",
-    "from collections import Counter"
+    "from torch.utils.data import Dataset\n",
+    "from collections import Counter\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "max_num=1250\n",
-      "[1250, 749, 449, 269, 161, 96, 58, 34, 20, 12]\n",
-      "max_num=3750\n",
-      "[3750, 2248, 1347, 807, 484, 290, 174, 104, 62, 37]\n",
-      "Files already downloaded and verified\n",
-      "#Labeled: 3098 #Unlabeled: 12401\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def make_imb_data(max_num, class_num, gamma, inv=False, bal=False):\n",
     "    print('max_num={}'.format(max_num))\n",
@@ -62,13 +40,13 @@
     "U_SAMPLES_PER_CLASS = make_imb_data(3 * 1250, 10, 100, False, False)\n",
     "N_SAMPLES_PER_CLASS_T = torch.Tensor(N_SAMPLES_PER_CLASS)\n",
     "\n",
-    "train_labeled_set, train_unlabeled_set, test_set = utils.get_cifar10('/home/shrinivas/Apoorva/Datasets', N_SAMPLES_PER_CLASS\n",
+    "train_labeled_set, train_unlabeled_set, test_set = utils.get_cifar10('/home/apoorva/Datasets', N_SAMPLES_PER_CLASS\n",
     ", U_SAMPLES_PER_CLASS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,62 +76,122 @@
     "\n",
     "    wts = []\n",
     "    for t in pseudo_labels:\n",
-    "        wts.append(target_dist[lbl][t].numpy())\n",
+    "        wts.append(float(target_dist[lbl][t])/N_SAMPLES_PER_CLASS[t])\n",
     "    return wts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3442316/3092086474.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdevice\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'cuda'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m'cpu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mimgs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlbls\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlabeled_loader\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mimgs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimgs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mlbls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlbls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "def plot_distribution(counter_class):\n",
+    "    names = list(counter_class.keys())\n",
+    "    values = list(counter_class.values())\n",
     "\n",
-    "for imgs, lbls, idxs in labeled_loader:\n",
-    "    imgs = imgs.to(device)\n",
-    "    lbls = lbls.to(device)\n",
-    "    for i in lbls:\n",
-    "        pl_weights = get_weights(pseudo_labels, i, target_dist)\n",
-    "        sampler = torch.utils.data.WeightedRandomSampler(weights= pl_weights, num_samples = 1, replacement = True)\n",
-    "        \n"
+    "    plt.bar(names, values, tick_label=names)\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3098,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y_train = [train_labeled_set.targets[i] for i in np.arange(len(train_labeled_set.targets))]\n",
-    "b = []\n",
-    "for t in y_train:\n",
-    "    b.append(1)\n",
+    "def get_loaders(unlabeled_train, num_classes, pseudo_labels, target_dist):\n",
+    "    \"\"\"\n",
+    "    Returns a dict of (num_classes) dataloaders of batch size 1 depending on the target distribution\n",
     "\n",
-    "sample_wts = np.array(b)\n",
+    "    Args:\n",
+    "        num_classes (int): number of dataloaders (equal to number of classes in the dataset)\n",
+    "        pseudo_labels (list): list of pseudo-labels generated by the model\n",
+    "        target_dist (tensor): target distribution obtained by dM/dCij\n",
     "\n",
-    "sampler = torch.utils.data.WeightedRandomSampler(weights= 1/sample_wts, num_samples = len(b), replacement = True)\n",
-    "print(np.array(list(sampler)).shape)\n"
+    "    Returns:\n",
+    "        dict: dictionary of num_classes loaders\n",
+    "    \"\"\"\n",
+    "    loader_dict = {}\n",
+    "    for i in range(num_classes):\n",
+    "        pl_weights = get_weights(pseudo_labels, i, target_dist)\n",
+    "        sampler = torch.utils.data.WeightedRandomSampler(weights= pl_weights, num_samples = len(pseudo_labels), replacement = True)\n",
+    "        loader = torch.utils.data.DataLoader(unlabeled_train, batch_size=None, num_workers=8, sampler=sampler)\n",
+    "        loader_dict.update({f\"{i}\":loader})\n",
+    "    return loader_dict\n",
+    "    \n",
+    "\n",
+    "# loaders = get_loaders(train_unlabeled_set, 10, pseudo_labels, target_dist)\n",
+    "# for i in range(10):\n",
+    "#     ldr = loaders[f'{i}']\n",
+    "#     labels = [int(i) for _, i, _ in ldr]\n",
+    "#     print(Counter(labels))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class UnlabeledDatasetCollate(Dataset):\n",
+    "    \"\"\"\n",
+    "    Class for collating the pseudo label-image pairs after target-distribution dependent sampling\n",
+    "    Returns a dataset object that can be passed into a dataloader directly\n",
+    "    \"\"\"\n",
+    "    def __init__(self, labels_list, images_list, transform=None, target_transform=None):\n",
+    "        \"\"\"\n",
+    "        Args:\n",
+    "            labels_list (list): list of labels obtained after sampling\n",
+    "            images_list (list): list of images corresponding to the labels sampled\n",
+    "            transform, target_transform (torch.nn.Sequential, optional): if we intend to apply any transforms on \n",
+    "            the sampled images. Defaults to None.\n",
+    "        \"\"\"\n",
+    "        self.labels_list = labels_list\n",
+    "        self.images_list = images_list\n",
+    "        self.transform = transform\n",
+    "        self.target_transform = target_transform\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.labels_list) \n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        image = self.images_list[idx]\n",
+    "        label = self.labels_list[idx]\n",
+    "        if self.transform:\n",
+    "            image = self.transform(image)\n",
+    "        if self.target_transform:\n",
+    "            label = self.target_transform(label)\n",
+    "        return image, label\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "list_dist = np.zeros(10)\n",
+    "for imgs, lbls, idxs in labeled_loader:    \n",
+    "    sl_list = []\n",
+    "    image_list = []\n",
+    "    imgs = imgs.to(device)\n",
+    "    lbls = lbls.to(device)  \n",
+    "    loaders = get_loaders(train_unlabeled_set, 10, pseudo_labels, target_dist)\n",
+    "    for i in lbls:\n",
+    "        image , sampled_label, _ = next(iter(loaders[f'{i}']))\n",
+    "        sl_list.append(int(sampled_label)) \n",
+    "        image_list.append(image)\n",
+    "    # print(Counter(sl_list))\n",
+    "    ulb_dataset_sampled = UnlabeledDatasetCollate(sl_list, image_list)\n",
+    "    ulb_loader = torch.utils.data.DataLoader(ulb_dataset_sampled, batch_size=128, num_workers=8, shuffle=True)\n",
+    "    img, lbl_ulb = next(iter(ulb_loader))\n",
+    "    lbl_ulb = lbl_ulb.numpy()\n",
+    "    for i in lbl_ulb:\n",
+    "        list_dist[i]+=1\n",
+    "    # print(Counter(lbl_ulb))\n",
+    "    plot_distribution(Counter(lbl_ulb)) "
    ]
   },
   {
@@ -164,19 +202,78 @@
    "source": [
     "class UnlabeledDataLoader(torch.utils.data.DataLoader):\n",
     "\n",
-    "    def __init__(self, target_dist):\n",
+    "    def __init__(self, ulb_dataset, model, target_dist, batch_size):\n",
     "        super(UnlabeledDataLoader, self).__init__()\n",
+    "        self.model = model\n",
+    "        self.ulb_dataset = ulb_dataset\n",
     "        self.target_dist = target_dist\n",
+    "        self.batch_size = batch_size\n",
+    "        self.pseudo_labels = self.gen_pl()\n",
+    "    \n",
+    "    # def gen_pl(self):\n",
+    "    #     ulb_loader = torch.utils.data.DataLoader(self.ulb_dataset, batch_size= 128, num_workers=8, shuffle=True)\n",
+    "    \n",
+    "    def get_loaders(self):\n",
+    "        \"\"\"\n",
+    "        Returns a dict of (num_classes) dataloaders of batch size 1 depending on the target distribution\n",
     "\n",
-    "    def get_batch(self, labels):\n",
-    "        for i in labels:\n",
-    "            # define logic for weights for each sampler "
+    "        Args:\n",
+    "            num_classes (int): number of dataloaders (equal to number of classes in the dataset)\n",
+    "            pseudo_labels (list): list of pseudo-labels generated by the model\n",
+    "            target_dist (tensor): target distribution obtained by dM/dCij\n",
+    "\n",
+    "        Returns:\n",
+    "            dict: dictionary of num_classes loaders\n",
+    "        \"\"\"\n",
+    "        loader_dict = {}\n",
+    "        for i in range(target_dist.shape[0]):\n",
+    "            pl_weights = get_weights(self.pseudo_labels, i, self.target_dist)\n",
+    "            sampler = torch.utils.data.WeightedRandomSampler(weights= pl_weights, num_samples = len(self.pseudo_labels), replacement = True)\n",
+    "            loader = torch.utils.data.DataLoader(self.ulb_dataset, batch_size=None, num_workers=8, sampler=sampler)\n",
+    "            loader_dict.update({f\"{i}\":loader})\n",
+    "        return loader_dict\n",
+    "\n",
+    "        \n",
+    "    pseudo_labels = [train_unlabeled_set.targets[i] for i in np.arange(len(train_unlabeled_set.targets))]\n",
+    "\n",
+    "    def get_weights(self, lbl):\n",
+    "        \"\"\"Returns the sampling weights for each data instance in the dataset \n",
+    "\n",
+    "        Args:\n",
+    "            pseudo_labels (list): list of pseudo-labels generated by the model\n",
+    "            lbl (tensor): labels present in one batch obtained from the dataloader\n",
+    "            target_dist (tensor): target distribution obtained by dM/dCij\n",
+    "\n",
+    "        Returns:\n",
+    "            list: list of instance-wise weights to be passed into the sampler\n",
+    "        \"\"\"\n",
+    "\n",
+    "        wts = []\n",
+    "        for t in self.pseudo_labels:\n",
+    "            wts.append(float(self.target_dist[lbl][t])/N_SAMPLES_PER_CLASS[t])\n",
+    "        return wts"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tests to be implemented\n",
+    "- [x] uniform\n",
+    "- [ ] diagonal\n",
+    "- [ ] off-diagonal\n",
+    "- [ ] multi off-diagonal\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('cossl')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -190,12 +287,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7f2dff10d7386dc6bae74d7cf2124a0edf535c531e523ee51c1fe963ff74b435"
+    "hash": "b8dd4fa52c2be142a1b05e1fd214df78dd67bbee7dce6644d036e63483141898"
    }
   }
  },
