complete dataloader class

--- a/sampler.ipynb
+++ b/sampler.ipynb
@@ -50,7 +50,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_dist = torch.nn.functional.normalize(torch.ones([10,10]))\n",
+    "# target_dist = torch.nn.functional.normalize(torch.ones([10,10]))\n",
+    "# target_dist = torch.diag(torch.ones(10))\n",
+    "target_dist = torch.zeros([10, 10])\n",
+    "for i in range(10):\n",
+    "    target_dist[i][0] = 1\n",
     "labeled_loader = torch.utils.data.DataLoader(train_labeled_set, batch_size=128, num_workers=8, shuffle=True)"
    ]
   },
@@ -178,7 +182,7 @@
     "    image_list = []\n",
     "    imgs = imgs.to(device)\n",
     "    lbls = lbls.to(device)  \n",
-    "    loaders = get_loaders(train_unlabeled_set, 10, pseudo_labels, target_dist)\n",
+    "    loaders = get_loaders(train_unlabeled_set, 10, pseudo_labels, target_dist) # todo: train_unlabeled_set replaced by a megabatch\n",
     "    for i in lbls:\n",
     "        image , sampled_label, _ = next(iter(loaders[f'{i}']))\n",
     "        sl_list.append(int(sampled_label)) \n",
@@ -190,8 +194,10 @@
     "    lbl_ulb = lbl_ulb.numpy()\n",
     "    for i in lbl_ulb:\n",
     "        list_dist[i]+=1\n",
-    "    # print(Counter(lbl_ulb))\n",
-    "    plot_distribution(Counter(lbl_ulb)) "
+    "    print(Counter(lbl_ulb))\n",
+    "    plot_distribution(Counter(lbl_ulb))\n",
+    "\n",
+    "print(list_dist) "
    ]
   },
   {
@@ -200,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class UnlabeledDataLoader(torch.utils.data.DataLoader):\n",
+    "class UnlabeledDataLoader():\n",
     "\n",
     "    def __init__(self, ulb_dataset, model, target_dist, batch_size):\n",
     "        super(UnlabeledDataLoader, self).__init__()\n",
@@ -210,9 +216,13 @@
     "        self.batch_size = batch_size\n",
     "        self.pseudo_labels = self.gen_pl()\n",
     "    \n",
-    "    # def gen_pl(self):\n",
-    "    #     ulb_loader = torch.utils.data.DataLoader(self.ulb_dataset, batch_size= 128, num_workers=8, shuffle=True)\n",
-    "    \n",
+    "    def gen_pl(self):\n",
+    "        list_labels = []\n",
+    "        ulb_loader = torch.utils.data.DataLoader(self.ulb_dataset, batch_size= 128, num_workers=8, shuffle=True)\n",
+    "        for img in ulb_loader:\n",
+    "            list_labels.append(self.model(img).numpy().flatten())\n",
+    "        return list_labels\n",
+    "            \n",
     "    def get_loaders(self):\n",
     "        \"\"\"\n",
     "        Returns a dict of (num_classes) dataloaders of batch size 1 depending on the target distribution\n",
@@ -234,7 +244,6 @@
     "        return loader_dict\n",
     "\n",
     "        \n",
-    "    pseudo_labels = [train_unlabeled_set.targets[i] for i in np.arange(len(train_unlabeled_set.targets))]\n",
     "\n",
     "    def get_weights(self, lbl):\n",
     "        \"\"\"Returns the sampling weights for each data instance in the dataset \n",
@@ -251,24 +260,30 @@
     "        wts = []\n",
     "        for t in self.pseudo_labels:\n",
     "            wts.append(float(self.target_dist[lbl][t])/N_SAMPLES_PER_CLASS[t])\n",
-    "        return wts"
+    "        return wts\n",
+    "\n",
+    "    def get_batch(self, labels):\n",
+    "        \"\"\"Returns a batch of unlabeled images and their pseudo labels sampled from a distribution dependent \n",
+    "\n",
+    "        Args:\n",
+    "            labels (torch.tensor): labels obtained from one minibatch of the labeled loader\n",
+    "\n",
+    "        Returns:\n",
+    "            img: torch.tensor of unlabeled images (shape NxCxHxW)\n",
+    "            lbl_ulb: torch tensor of sampled pseudo labels (shape Nx1) \n",
+    "        \"\"\"\n",
+    "        sl_list = []\n",
+    "        image_list = []\n",
+    "        loaders = self.get_loaders(self.ulb_dataset, len(self.ulb_dataset.classes), self.pseudo_labels, self.target_dist)\n",
+    "        for i in labels:\n",
+    "            image , sampled_label, _ = next(iter(loaders[f'{i}']))\n",
+    "            sl_list.append(int(sampled_label)) \n",
+    "            image_list.append(image)\n",
+    "        ulb_dataset_sampled = UnlabeledDatasetCollate(sl_list, image_list)\n",
+    "        ulb_loader = torch.utils.data.DataLoader(ulb_dataset_sampled, batch_size=128, num_workers=8, shuffle=True)\n",
+    "        img, lbl_ulb = next(iter(ulb_loader))\n",
+    "        return img, lbl_ulb\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Tests to be implemented\n",
-    "- [x] uniform\n",
-    "- [ ] diagonal\n",
-    "- [ ] off-diagonal\n",
-    "- [ ] multi off-diagonal\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
