replace collated iterator with tensor stack

--- a/sampler_test.ipynb
+++ b/sampler_test.ipynb
@@ -12,7 +12,8 @@
     "from utils import make_imb_data, get_cifar10, plot_distribution\n",
     "from models.wrn import WRN\n",
     "from collections import Counter\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import time"
    ]
   },
   {
@@ -60,9 +61,7 @@
     "labeled_loader = torch.utils.data.DataLoader(train_labeled_set, batch_size=128, num_workers=8, shuffle=True)\n",
     "for imgs, lbls, _ in labeled_loader:\n",
     "    ulb_loader = UnlabeledDataLoader(train_unlabeled_set, model, target_dist, N_SAMPLES_PER_CLASS, 128)\n",
-    "    img_u, ulb_u = ulb_loader.get_batch(lbls)\n",
-    "    print(ulb_u)\n",
-    "    plot_distribution(Counter(ulb_u.numpy()))\n"
+    "    img_u, ulb_u = ulb_loader.get_batch(lbls)"
    ]
   }
  ],
